--- a/EmptyBlazorApp1.csproj
+++ b/EmptyBlazorApp1.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Havit.Blazor.Components.Web.Bootstrap" Version="4.0.1" />
+  </ItemGroup>
+
 </Project>
